# mycode

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODING_STYLE.md  MODULE_DESIGN.md  partitions.8MiB.csv
main/: CMakeLists.txt  board.h  board_esp32.c  main.c  main.h
main/DISPLAY/: app_display.c  app_display.h  drv_ws2816_spi.c  drv_ws2816_spi.h  ws2816.c  ws2816.h  ws2816_color.c
main/UDS_STCAK/Core/UDSM/: UDSM_private.h  UDSM_program.c
main/at/core/: at.c  at_frame.c  at_mqtt.c  at_parser.c  at_transaction.c  at_urc.c
main/at/include/: at.h
main/at/port/: at_port.h  esp32_at_port.c
main/ble/: app_ble.c  app_ble.h  drv_gap.c  drv_gap.h  drv_gatt_svc.c  drv_gatt_svc.h
main/ble/core/: ble.c
main/ble/include/: ble.h
main/ble/port/: ble_port.h  esp32_ble_port.c
main/bq40z80/: bms.c  bms.h
main/bq40z80/core/: bq40z80.c
main/bq40z80/include/: bq40z80.h
main/bq40z80/port/: bq40z80_port.h  esp32_bq40z80_port.c  stm32_bq40z80_port.c
main/can diag/isotp/port/: esp32_isotp_port.c
main/can diag/uds/core/: uds.c
main/can_simple/: can_simple.c  can_simple.h
main/can_simple/core/: can_simple.c
main/can_simple/include/: can_simple.h
main/can_simple/port/: can_simple_port.h  esp32_can_port.c
main/diag/isotp/core/: isotp_config.h
main/diag/uds/core/: uds_defs.h  uds_service.c
main/diag/uds/port/: uds_port.h
main/eeprom/core/: eeprom.c
main/eeprom/include/: eeprom.h
main/eeprom/port/: eeprom_port.h  esp32_eeprom_port.c
main/foc/: foc.c  foc.h
main/foc/core/: foc.c
main/foc/include/: foc.h
main/foc/port/: esp32_foc_port.c  foc_port.h
main/imu/: app_imu.c  app_imu.h  drv_imu.c  drv_imu.h  icm42688.c  icm42688.h
main/imu/core/: icm42688.c  imu.c
main/imu/include/: imu.h
main/imu/port/: esp32_imu_port.c  imu_port.h
main/isotp/: README.mkd
main/isotp/core/: isotp.c  isotp_config.h  isotp_defines.h  isotp_user.h
main/isotp/include/: isotp.h
main/isotp/port/: esp32_isotp_port.c  isotp_port.h  stm32_isotp_port.c
main/key/: key.c  key.h
main/key/core/: key.c  key_event.c  key_filter.c  key_state.c
main/key/include/: key.h
main/key/port/: esp32_key_port.c  linux_key_port.c  stm32_key_port.c
main/mqtt/core/: mqtt.c
main/mqtt/include/: mqtt.h
main/swi2c and eeprom driver/: eeprom.c  eeprom.h  swi2c.c  swi2c.h
main/swi2c/core/: swi2c.c
main/swi2c/include/: swi2c.h
main/swi2c/port/: esp32_bitbang.c  esp32_i2c_port.c  stm32_i2c_port.c  swi2c_port.c  swi2c_port.h
main/uart/core/: uart.c  uart_frame.c
main/uart/include/: uart.h  uart_frame.h
main/udisk/: app_udisk.c  app_udisk.h  drv_udisk.c  drv_udisk.h
main/udisk/core/: udisk.c
main/udisk/include/: udisk.h
main/udisk/port/: stm32_udisk_port.c  udisk_port.h
main/uds/: can_if.c  can_if.h  isotp.h  uds.c  uds.h
main/uds/core/: isotp_defines.h  isotp_user.h  uds.c  uds_service.c  uds_service.h
main/uds/include/: uds.h  uds_service.h
main/uds/port/: esp32_uds_port.c  uds_port.h
main/utility/: utilities.c  utilities.h
main/ws2812/core/: ws2812.c  ws2812_color.c  ws2812_effect.c
main/ws2812/include/: ws2812.h  ws2812_config.h
main/ws2812/port/: esp32_rmt.c  stm32_gpio.c  stm32_timer+dma.c  ws2812_port.h
main/ws2812b/: ws2812b.c  ws2812b.h
main/ws281x/core/: ws281x.c  ws281x_color.c  ws281x_effect.c
main/ws281x/include/: ws281x.h  ws281x_config.h
main/ws281x/port/: esp32_rmt.c  stm32_gpio.c  stm32_timer+dma.c  ws281x_port.h
